Increase maximum heap size when updating incomplete link list