@@ -1,4 +1,4 @@
 #!/usr/bin/env bash
 set -e
-./sbt ${1} 'project digiroad2' "runMain fi.liikennevirasto.digiroad2.util.UpdateIncompleteLinkList"
-
+SBT_OPTS="-Xms1512M -Xmx4096m -Xss1M -XX:+CMSClassUnloadingEnabled -XX:MaxPermSize=1024M"
+java $SBT_OPTS -jar `dirname $0`/sbt-launch.jar ${1} 'project digiroad2' "runMain fi.liikennevirasto.digiroad2.util.UpdateIncompleteLinkList"
